<resources>
    <string name="app_name">Tour Guide 1.0</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_up"><u>sign_up</u></string>
    <string name="drawerOpen" />
    <string name="drawerClose" />
    <string name="weather_api">618e3a096dcd96b86ffa64b35ef140e1</string>
    <string name="place_api">AIzaSyDJTrhiPeisMKhV1SK7fFv4IF7u_Fpe8FA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_own_event">Create Your Own Event</string>
    <string name="tour_place">Tour Place</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="write_about_the_tour">Write about the tour…</string>
    <string name="create_event">Create Event</string>
    <string name="at">At</string>
    <string name="attending">Attending</string>
    <string name="exit_toast" translatable="false">Press again to exit!</string>
    <string name="description"><u>Description :</u></string>
    <string name="taka">৳</string>
    <string name="group_name">Group Name</string>
    <string name="total_cost">Total Cost</string>
    <string name="update_your_event">Update Your Event</string>
    <string name="update">Update</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="meeting_place">Meeting Place</string>
    <string name="event_description">Event Description</string>
    <string name="district">District</string>
    <string name="return_date">Return Date</string>
    <string name="start_date">Start Date</string>
    <string name="select_tourism_places">Select tourism places</string>
    <string name="tour">Tour</string>
    <string name="event">Event</string>
    <string name="weather">Weather</string>
    <string name="join_event">Join Event</string>
    <string name="leave_event">Leave Event</string>
</resources>
