<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout2"
    android:background="@color/colorGreen"
    tools:context=".Activities.CreateEvent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/amarante"
            android:text="@string/update_your_event"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_nameTVL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@android:color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/group_name"
            android:textColorHint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="21sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/event_placeTVL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_nameTVL"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@android:color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/tour_place"
            android:textColorHint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="21sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_placeTVL"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_dateTVL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:hint="@string/event_date"
                app:boxStrokeColor="@android:color/white"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@android:color/white"
                    android:textSize="21sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_timeTVL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:hint="@string/event_time"
                app:boxStrokeColor="@android:color/white"
                android:textColorHint="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_time"
                    android:layout_width="match_parent"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="21sp" />
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costTVL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/rl1"
            android:hint="@string/total_cost"
            app:boxStrokeColor="@android:color/white"
            android:textColorHint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@android:color/white"
                android:textSize="21sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meeting_placeTVL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/costTVL"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@android:color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/meeting_place"
            android:textColorHint="@android:color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="21sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/meeting_placeTVL"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_text_design2"
            android:gravity="top|start"
            android:hint="@string/write_about_the_tour"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="10"
            android:maxLength="2000"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/create_eventBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_description"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/custom_btn"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</ScrollView>